@startuml class_school_update_reward
title Class Diagram - PUT /api/school/rewards/{rewardId} (Cập nhật quà thưởng)

skinparam classAttributeIconSize 0

package "controller" {
    class RewardController {
        - rewardService : IRewardService
        + updateReward(rewardId: UUID, request: UpdateRewardRequest) : ResponseEntity<ResponseDto<RewardResponse>>
    }
}

package "service" {
    interface IRewardService {
        + updateReward(rewardId: UUID, request: UpdateRewardRequest) : RewardResponse
    }

    class RewardServiceImpl implements IRewardService {
        - rewardRepository : RewardRepository
        - schoolRepository : SchoolRepository
        - s3PresignedUrlService : S3PresignedUrlService
        + updateReward(rewardId: UUID, request: UpdateRewardRequest) : RewardResponse
        - assertOwnership(rewardId: UUID, schoolId: UUID) : Reward
    }
}

package "dto.request" {
    class UpdateRewardRequest {
        - rewardName : String
        - rewardType : RewardType
        - description : String
        - coinCost : BigDecimal
        - imageUrl : String
        - stockQuantity : Integer
        - isUnlimited : Boolean
        - termsConditions : String
    }
}

package "repository" {
    interface RewardRepository extends JpaRepository {
        + findByIdAndSchoolIdAndIsDeleteFalse(id: UUID, schoolId: UUID) : Optional<Reward>
        + existsByRewardNameAndSchoolIdAndIsDeleteFalse(name: String, schoolId: UUID) : boolean
    }
}

RewardController --> IRewardService : uses
RewardServiceImpl --> RewardRepository : uses

@enduml
